Harden input validation, value immutability, and observer resilience
Drop the unused ExecutionEnvironment parameter from FeatureConfigMapper (C1); deep-copy Map/List defaults and literals into unmodifiable structures (C2/C7); report null config array elements with index context; cap expression nesting depth and reject unknown escapes and duplicate object keys; validate event timestamps as integral; reject non-null cache values; reject contradictory output_policy on BASE features; keep the async observer worker alive on sink Errors and always wake drain waiters.